dims no longer clipped by artboard offset

--- a/resources/ui/style.css
+++ b/resources/ui/style.css
@@ -68,7 +68,6 @@ button {
 
 .c-artboard {
   position: relative;
-  overflow: hidden;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.33);
   z-index: 3;
 }
@@ -286,6 +285,15 @@ button {
 
 .c-canvas-zoom-button--in {
   background: yellow;
+}
+
+.c-layers {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  overflow: hidden;
 }
 
 .c-layer {
