--- a/styles/components/layers.sass
+++ b/styles/components/layers.sass
@@ -1,2 +1,3 @@
 .c-layers
   +absolute-full
+  overflow: hidden
